Update LO & fix some errors
Update LO with recent work
Fix some tupos
Add links to github & LinkedIn
Improve the document style

--- a/FredCombes/cv-fred-combes.tex
+++ b/FredCombes/cv-fred-combes.tex
@@ -1,7 +1,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Friggeri Resume/CV
+% Frédéric Combes/CV
 % XeLaTeX Template
-% Version 1.0 (5/5/13)
+% Version 1.0 (2014-12-06)
 %
 % This template has been downloaded from:
 % http://www.LaTeXTemplates.com
@@ -36,23 +36,22 @@
 \begin{aside} % In the aside, each new line forces a line break
 \section{contact}
 1 rue Pons Capdenier
-316500 TOULOUSE
+31500 TOULOUSE
 France
 ~
 +33 (0)6 31 97 71 06
 \href{mailto:marthym@gmail.com}{marthym@gmail.com}
-%\href{http://www.smith.com}{http://www.smith.com}
-%\href{http://facebook.com/johnsmith}{fb://jsmith}
+\href{https://github.com/Marthym}{github.com/Marthym}
+\href{https://fr.linkedin.com/pub/frédéric-combes/91/820/108/}{li/frédéric-combes}
 \section{langues}
 français langue maternelle
 anglais (lu, écrit, parlé)
 \section{compétences}
-Java J2EE
-Hibernate, Struts, Spring
-SVN, Git
+Java 8
+OSGI, Struts, Spring
+SVN, Git, Docker
 Oracle, MySQL
-JavaScript
-CSS3 \& HTML5
+JS, CSS3, HTML5
 Linux
 \end{aside}
 
@@ -62,54 +61,51 @@ Linux
 \section{expriences professionnelles}
 
 \begin{entrylist}
-%------------------------------------------------
+%---- LIVING OBJECTS --------------------------------------------------------------------
 \entry
 {Depuis 2014}
 {Living Objects}
 {Toulouse, Basso Cambo}
-{\emph{Expert développement Java} \\
-Au sein du département Recherche \& Développement de Living Object, composé d'une quinzaine de développeurs, je supervise les choix techniques concernant le projet "eye.lo", un collecteur de flow Cisco pour lequel les contraintes de performances et de haute disponibilité sont très strictes.
+{\vspace{0.2cm}\emph{Expert développement Java} \discretright{/ Java 8, Wisdom, OSGI, Ansible, Docker /}\\
+Au sein du département Recherche \& Développement de Living Objects, composé d'une quinzaine de développeurs, je supervise les choix techniques concernant le projet "eye.lo", un collecteur de flow Cisco pour lequel les contraintes de performances et de haute disponibilité sont très strictes.
 
-En plus du projet "eye.lo", j'ai eu la possibilité de participer à l'implémentation de la future version du projet "b.lo", un sur-ensemble du projet "eye.lo" qui en plus des flow Cisco est capable de collecter des fichiers CSV issus de routeurs Hiawei ou via SNMP. Cette nouvelle version vise à accroitre la capacité de stockage et la parallélisation des calculs grâce à des solutions comme Cassandra ou Akka.
-}
-%------------------------------------------------
+J'ai de plus pris part à la réalisation de la nouvelle génération du produit "b.lo". Basé sur une architecture orienté micro-services REST, à base de Java 8 et d'OGSI (Wisdom), ce projet m'a permis de consolider mes compétences de développeur ainsi que mes aptitudes à travailler en équipe.
+}\\
+
+%---- CAMELEON SOFTWARE -----------------------------------------------------------------
 \entry
 {2007 -- 2013}
 {Cameleon Software}
 {Toulouse, Labège}
-{\emph{Consultant Technique Expert} \\
+{\vspace{0.2cm}\emph{Consultant Technique Expert} \discretright{/ Java J2EE, Axis 2, Struts, HTML/CSS/Js /}\\
 Expert Technique au sein de l'équipe "CEO Services" composée de neuf personnes, mes attributions sont les suivantes :
 \begin{itemize}
 \item Développement de composants d’interface sur les nouveaux produits. Pour des sociétés
 comme la MNT pour qui j’ai implémenté des composants de leur offre en ligne grâce à ma
-maîtrise des technologies web 2.0. \\
-	{\footnotesize \textit Java J2EE, JSP, Struts/Tiles, HTML/CSS/Javascript}
+maîtrise des technologies web 2.0.
 \item Réalisation d’intégration entre nos produits et des CRM tel que Selligent pour des clients
-comme Gras Savoye grâce à mes compétences en Web Services. \\
-	{\footnotesize \textit Java J2EE, Axis 2.0}
+comme Gras Savoye grâce à mes compétences en Web Services.
 \item Réalisation de PoC, pour des clients comme AXA, MMA, SAGE ou encore La Poste. Mon sens
 du relationnel et l'esprit d'équipe nécessaires pour de telles réalisations, m'ont permis de
 présenter des concepts aboutis à des clients convaincus.
 \item Missions à l’étranger pour travailler avec notre équipe à Chicago sur des projets SaS comme
 Clear Channel et Crystal Rock pour qui j'ai développé des interfaces avancées de
-configuration de produit. \\
-{\footnotesize \textit Java J2EE, JSP, Struts/Tiles, HTML/CSS/Javascript}
+configuration de produit.
 \end{itemize}
-}
-%------------------------------------------------
+}\\
+
+%---- ACCESS COMMERCE --------------------------------------------------------------------
 \entry
 {2001 -- 2007}
 {Access-Commerce}
 {Toulouse, Labège}
-{\emph{Développeur d'adaptations} \\
+{\vspace{0.2cm}\emph{Développeur d'adaptations}  \discretright{/ Java, J2EE, Administration Oracle, Linux/UNIX /}\\
 Centre de compétences ERP chez Access Commerce à Toulouse Labège.
 En tant qu’unique ressource technique d'une équipe de sept personnes, j’ai, entre autres, effectué les
 missions suivantes :
 \begin{itemize}
-\item Installation et administration de serveur Oracle sur systèmes Windows et Unix \\
-	{\footnotesize \textit Certification Oracle DBA 10g, Shell UNIX}
-\item Windows trying to print in letter format \\
-	{\footnotesize \textit Java, J2EE, JSP, Administration et tuning Oracle 10g}
+\item Installation et administration de serveur Oracle sur systèmes Windows et Unix
+\item Windows trying to print in letter format
 \end{itemize}
 }
 %------------------------------------------------
