--- a/FredCombes/cv-fred-combes.tex
+++ b/FredCombes/cv-fred-combes.tex
@@ -69,7 +69,7 @@ Linux
 {\vspace{0.2cm}\emph{Expert développement Java} \discretright{/ Java 8, Wisdom, OSGI, Ansible, Docker /}\\
 Au sein du département Recherche \& Développement de Living Objects, composé d'une quinzaine de développeurs, je supervise les choix techniques concernant le projet "eye.lo", un collecteur de flow Cisco pour lequel les contraintes de performances et de haute disponibilité sont très strictes.
 
-J'ai de plus pris part à la réalisation de la nouvelle génération du produit "b.lo". Basé sur une architecture orienté micro-services REST, à base de Java 8 et d'OGSI (Wisdom), ce projet m'a permis de consolider mes compétences de développeur ainsi que mes aptitudes à travailler en équipe.
+J'ai de plus pris part à la réalisation de la nouvelle génération du produit "b.lo". Basé sur une architecture orientée micro-services REST, à base de Java 8 et d'OGSI (Wisdom), ce projet m'a permis de consolider mes compétences de développeur ainsi que mes aptitudes à travailler en équipe.
 }\\
 
 %---- CAMELEON SOFTWARE -----------------------------------------------------------------
