--- a/FredCombes/cv-fred-combes.tex
+++ b/FredCombes/cv-fred-combes.tex
@@ -50,6 +50,7 @@ anglais (lu, écrit, parlé)
 Java 8
 OSGI, Struts, Spring
 SVN, Git, Docker
+Maven, Ivy, Ant
 Oracle, MySQL
 JS, CSS3, HTML5
 Linux
@@ -66,7 +67,7 @@ Linux
 {Depuis 2014}
 {Living Objects}
 {Toulouse, Basso Cambo}
-{\vspace{0.2cm}\emph{Expert développement Java} \discretright{/ Java 8, Wisdom, OSGI, Ansible, Docker /}\\
+{\vspace{0.2cm}\emph{Expert développement Java} \discretright{/ Java 8, Wisdom, OSGI, Maven, Ansible, Docker /}\\
 Au sein du département Recherche \& Développement de Living Objects, composé d'une quinzaine de développeurs, je supervise les choix techniques concernant le projet "eye.lo", un collecteur de flow Cisco pour lequel les contraintes de performances et de haute disponibilité sont très strictes.
 
 J'ai de plus pris part à la réalisation de la nouvelle génération du produit "b.lo". Basé sur une architecture orientée micro-services REST, à base de Java 8 et d'OGSI (Wisdom), ce projet m'a permis de consolider mes compétences de développeur ainsi que mes aptitudes à travailler en équipe.
