Update friggeri-cv.cls for new list style
Add specific style for capabilities list
Use packagae enumitem

--- a/FredCombes/cv-fred-combes.tex
+++ b/FredCombes/cv-fred-combes.tex
@@ -138,6 +138,7 @@ missions suivantes :
 {DUT {\normalfont Informatique Génie logiciel}}
 {IUT de Rodez}
 {}
+%------------------------------------------------
 \entry
 {1998}
 {Bac S {\normalfont Spécialité Biologie}}
@@ -152,52 +153,30 @@ missions suivantes :
 
 \section{compétences}
 
-\begin{entrylist}
-%------------------------------------------------
-\entry
-{---}
-{Anglais}
-{Lu, écrit et parlé}
-{Utilisé lors des mes déplacements aux USA et durant les réunions de cadrage avec les clients
-étrangers.}
-%------------------------------------------------
-\entry
-{---}
-{Java}
-{Expert}
-{Langage de programmation principal du logiciel édité par Caméléon Software}
-%------------------------------------------------
-\entry
-{---}
-{Eclipse, IntelliJ}
-{Maîtrise}
-{EDIs utilisés pour les développements}
-%------------------------------------------------
-\entry
-{---}
-{Subversion, Git}
-{Maîtrise}
-{Outils de gestion de source utilisé par Cameleon Software \& Living Objects}
-%------------------------------------------------
-\entry
-{---}
-{Oracle, MySQL}
-{Expert}
-{Certification OCA 10g, MySQL est la base de données utilisé chez Living Objects}
-%------------------------------------------------
-\entry
-{---}
-{Maven, Ivy}
-{Maîtrise}
-{Outils de build utilisé chez Living Objects}
-%------------------------------------------------
-\entry
-{---}
-{Linux}
-{Expert}
-{Unique système d'exploitation utilisé chez Cameleon \& Living Objects}
-%------------------------------------------------
-\end{entrylist}
+\begin{capabilitize}
+	\capability {Anglais}
+		{Lu, écrit et parlé}
+		{Utilisé lors des mes déplacements aux USA et durant les réunions de cadrage avec les clients
+		étrangers.}
+	\capability {Java 8}
+		{Expert}
+		{Langage de programmation principal du logiciel édité par Caméléon Software}
+	\capability {Eclipse, IntelliJ}
+		{Maîtrise}
+		{EDIs utilisés pour les développements}
+	\capability {Subversion, Git}
+		{Maîtrise}
+		{Outils de gestion de source utilisé par Cameleon Software \& Living Objects}
+	\capability {Oracle, MySQL}
+		{Expert}
+		{Certification OCA 10g, MySQL est la base de données utilisé chez Living Objects}
+	\capability {Maven, Ivy}
+		{Maîtrise}
+		{Outils de build utilisé chez Living Objects}
+	\capability {Linux}
+		{Expert}
+		{Unique système d'exploitation utilisé chez Cameleon \& Living Objects}
+\end{capabilitize}
 
 %----------------------------------------------------------------------------------------
 %	Section INTERETS
