--- a/FredCombes/friggeri-cv.cls
+++ b/FredCombes/friggeri-cv.cls
@@ -137,6 +137,8 @@
 % List environment %
 %%%%%%%%%%%%%%%%%%%%
 
+\RequirePackage{enumitem}
+
 \setlength{\tabcolsep}{0pt}
 \newenvironment{entrylist}{%
   \begin{tabular*}{\textwidth}{@{\extracolsep{\fill}}ll}
@@ -149,11 +151,21 @@
 \hfill{\footnotesize\addfontfeature{Color=lightgray} #1}}
 
 \newcommand{\entry}[4]{%
-  #1&\parbox[t]{13.5cm}{% Largeur de la colonne de date
+  #1 & \parbox[t]{13.5cm}{% Largeur de la colonne de date
     \textbf{#2}%
     \discretright{#3}\\%
     #4 \vspace{\parsep}%
-  }\\}
+  }\\
+}
+
+\newlist{capabilitize}{itemize}{1}
+\setlist[capabilitize,1]{label=\textbullet, leftmargin=*, align=left}
+\newcommand{\capability}[3]{%
+	\item[\textbf{#1}] {\hfill
+		\discretright{#2}\\
+		#3
+	}
+}
 
 %%%%%%%%%%%%%%
 % Side block %
