fix(cv): Fix typo errors
Error in Access-Commerce experience
Fix accents
Fix typos

--- a/java-software-engineer/cv-fred-combes.tex
+++ b/java-software-engineer/cv-fred-combes.tex
@@ -59,7 +59,7 @@ Linux
 %----------------------------------------------------------------------------------------
 %	SECTION: 'Expérience Professionnelle'
 %----------------------------------------------------------------------------------------
-\section{expriences professionnelles}
+\section{expériences professionnelles}
 
 \begin{entrylist}
 %---- LIVING OBJECTS --------------------------------------------------------------------
@@ -101,12 +101,13 @@ configuration de produit.
 {Access-Commerce}
 {Toulouse, Labège}
 {\vspace{0.2cm}\emph{Développeur d'adaptations}  \discretright{/ Java, J2EE, Administration Oracle, Linux/UNIX /}\\
-Centre de compétences ERP chez Access Commerce à Toulouse Labège.
+Centre de compétences ERP chez Access-Commerce à Toulouse Labège.
 En tant qu’unique ressource technique d'une équipe de sept personnes, j’ai, entre autres, effectué les
 missions suivantes :
 \begin{itemize}
 \item Installation et administration de serveur Oracle sur systèmes Windows et Unix
-\item Windows trying to print in letter format
+\item Développement de portail de vente en ligne pour la société Pages Jaunes
+\item Développements et adaptations diverses de l'ERP OCTAL basé sur 'Oracle Forms Designer' 
 \end{itemize}
 }
 %------------------------------------------------
@@ -160,7 +161,7 @@ missions suivantes :
 		étrangers.}
 	\capability {Java 8}
 		{Expert}
-		{Langage de programmation principal du logiciel édité par Caméléon Software}
+		{Langage de programmation principal des applications éditées par Caméléon Software \& Living Objects}
 	\capability {Eclipse, IntelliJ}
 		{Maîtrise}
 		{EDIs utilisés pour les développements}
@@ -175,7 +176,7 @@ missions suivantes :
 		{Outils de build utilisé chez Living Objects}
 	\capability {Linux}
 		{Expert}
-		{Unique système d'exploitation utilisé chez Cameleon \& Living Objects}
+		{Unique système d'exploitation utilisé chez Cameleon Software \& Living Objects}
 \end{capabilitize}
 
 %----------------------------------------------------------------------------------------
