fix(lo): Fix OSGi typo

--- a/java-software-engineer/cv-fred-combes.tex
+++ b/java-software-engineer/cv-fred-combes.tex
@@ -48,7 +48,7 @@ français langue maternelle
 anglais (lu, écrit, parlé)
 \section{compétences}
 Java 8
-OSGI, Struts, Spring
+OSGi, Struts, Spring
 SVN, Git, Docker
 Maven, Ivy, Ant
 Oracle, MySQL
@@ -67,10 +67,10 @@ Linux
 {Depuis 2014}
 {Living Objects}
 {Toulouse, Basso Cambo}
-{\vspace{0.2cm}\emph{Expert développement Java} \discretright{/ Java 8, Wisdom, OSGI, Maven, Ansible, Docker /}\\
+{\vspace{0.2cm}\emph{Expert développement Java} \discretright{/ Java 8, Wisdom, OSGi, Maven, Ansible, Docker /}\\
 Au sein du département Recherche \& Développement de Living Objects, composé d'une quinzaine de développeurs, je supervise les choix techniques concernant le projet "eye.lo", un collecteur de flow Cisco pour lequel les contraintes de performances et de haute disponibilité sont très strictes.
 
-J'ai de plus pris part à la réalisation de la nouvelle génération du produit "b.lo". Basé sur une architecture orientée micro-services REST, à base de Java 8 et d'OSGI (Wisdom), ce projet m'a permis de consolider mes compétences de développeur ainsi que mes aptitudes à travailler en équipe.
+J'ai de plus pris part à la réalisation de la nouvelle génération du produit "b.lo". Basé sur une architecture orientée micro-services REST, à base de Java 8 et d'OSGi (Wisdom), ce projet m'a permis de consolider mes compétences de développeur ainsi que mes aptitudes à travailler en équipe.
 }\\
 
 %---- CAMELEON SOFTWARE -----------------------------------------------------------------
