fix(sidebar): Fix LinkedIn URL & Translate Misc information

--- a/java-software-engineer/cv-fred-combes.tex
+++ b/java-software-engineer/cv-fred-combes.tex
@@ -42,7 +42,7 @@ France
 +33 (0)6 31 97 71 06
 \href{mailto:marthym@gmail.com}{marthym@gmail.com}
 \href{https://github.com/Marthym}{github.com/Marthym}
-\href{https://fr.linkedin.com/pub/frédéric-combes/91/820/108/}{li/frédéric-combes}
+\href{https://www.linkedin.com/in/combesfrederic}{in/combesfrederic}
 \section{langues}
 français langue maternelle
 anglais (lu, écrit, parlé)
@@ -107,7 +107,7 @@ missions suivantes :
 \begin{itemize}
 \item Installation et administration de serveur Oracle sur systèmes Windows et Unix
 \item Développement de portail de vente en ligne pour la société Pages Jaunes
-\item Développements et adaptations diverses de l'ERP OCTAL basé sur 'Oracle Forms Designer' 
+\item Développements et adaptations diverses de l'ERP OCTAL basé sur 'Oracle Forms Designer'
 \end{itemize}
 }
 %------------------------------------------------
@@ -187,8 +187,8 @@ missions suivantes :
 
 Détenteur d'un \textbf{permis B}
 
-\textbf{professional:} algorithmique, TDD, amélioration de code legacy, travail en équipe
+\textbf{professionnel:} algorithmique, TDD, amélioration de code legacy, travail en équipe
 
-\textbf{personal:} tennis, volley ball, ski, squash
+\textbf{personnel:} tennis, volley ball, ski, squash
 
 \end{document}
