feat(LO): Update LivingObjects experience

--- a/java-software-engineer/cv-fred-combes.tex
+++ b/java-software-engineer/cv-fred-combes.tex
@@ -68,9 +68,12 @@ Linux
 {Living Objects}
 {Toulouse, Basso Cambo}
 {\vspace{0.2cm}\emph{Expert développement Java} \discretright{/ Java 8, Wisdom, OSGi, Maven, Ansible, Docker /}\\
-Au sein du département Recherche \& Développement de Living Objects, composé d'une quinzaine de développeurs, je supervise les choix techniques concernant le projet "eye.lo", un collecteur de flow Cisco pour lequel les contraintes de performances et de haute disponibilité sont très strictes.
+Au sein du département Recherche \& Développement de Living Objects, composé d'une quinzaine de développeurs,
+réparti entre frontend et backend, je participe au développement de eye.LO. Le produit phare de la société. Développé
+en Java 8, sur un framework OSGi avec une architechture micro-service REST.
 
-J'ai de plus pris part à la réalisation de la nouvelle génération du produit "b.lo". Basé sur une architecture orientée micro-services REST, à base de Java 8 et d'OSGi (Wisdom), ce projet m'a permis de parfaire mes compétences de développeur ainsi que mes aptitudes à travailler en équipe.
+Je me concentre tout particulièrement sur le module de topology réseau. Ce dernier, grâce à une base de données Neo4j,
+est capable d'analyser tout les types de réseaux des différents opérateurs téléphonique client de la solution.
 }\\
 
 %---- CAMELEON SOFTWARE -----------------------------------------------------------------
