fix(cv): Fix itemize + french and change puce

--- a/java-software-engineer/cv-fred-combes.tex
+++ b/java-software-engineer/cv-fred-combes.tex
@@ -20,14 +20,17 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \documentclass{friggeri-cv} 	% Add 'print' as an option into the square bracket to remove colors from this template for printing
+
 \usepackage[french]{babel}
-%\usepackage{csquotes}			% pour la ponctuation multi-langue
+\frenchbsetup{StandardItemLabels}
+
+\usepackage{csquotes}
 
 \hypersetup{pdfborder={0 0 0},colorlinks}
 
 \begin{document}
 
-\header{frédéric}{|}{combes}{expert développement java} % Your name and current job title/field
+\header{frédéric}{|}{combes}{expert développement java}
 
 %----------------------------------------------------------------------------------------
 %	SIDEBAR SECTION
