fix(LO): Fix typo on LO XP

--- a/java-software-engineer/cv-fred-combes.tex
+++ b/java-software-engineer/cv-fred-combes.tex
@@ -73,9 +73,9 @@ Linux
 {\vspace{0.2cm}\emph{Expert développement Java} \discretright{/ Java 8, Wisdom, OSGi, Maven, Ansible, Docker /}\\
 Au sein du département Recherche \& Développement de Living Objects, composé d'une quinzaine de développeurs,
 réparti entre frontend et backend, je participe au développement de "eye.LO". Le produit principal de la société. Développé
-en Java 8, sur un framework OSGi avec une architechture micro-service REST.\\
+en Java 8, sur un framework OSGi avec une architecture micro-service REST.\\
 
-Je me concentre tout particulièrement sur le module de topology réseau. Ce dernier, grâce à une base de données Neo4j,
+Je me concentre tout particulièrement sur le module de topologie réseau. Ce dernier, grâce à une base de données Neo4j,
 est capable d'analyser tout les types de réseaux des différents opérateurs téléphonique client de la solution.
 \\}
 
