feat(java-software-engineer): increase neo4j experience visibility and fix typo

--- a/java-software-engineer/cv-fred-combes.tex
+++ b/java-software-engineer/cv-fred-combes.tex
@@ -52,9 +52,8 @@ anglais (lu, écrit, parlé)
 \section{compétences}
 Java 8
 OSGi, Struts, Spring
-SVN, Git, Docker
-Maven, Ivy, Ant
-Oracle, MySQL
+Maven, Git, Docker
+Oracle, MySQL, Neo4j
 JS, CSS3, HTML5
 Linux
 \end{aside}
@@ -70,13 +69,13 @@ Linux
 {Depuis 2014}
 {Living Objects}
 {Toulouse, Basso Cambo}
-{\vspace{0.2cm}\emph{Expert développement Java} \discretright{/ Java 8, Wisdom, OSGi, Maven, Ansible, Docker /}\\
+{\vspace{0.2cm}\emph{Expert développement Java} \discretright{/ Java 8, Neo4j, OSGi, Maven, Docker /}\\
 Au sein du département Recherche \& Développement de Living Objects, composé d'une quinzaine de développeurs,
 réparti entre frontend et backend, je participe au développement de "eye.LO". Le produit principal de la société. Développé
 en Java 8, sur un framework OSGi avec une architecture micro-service REST.\\
 
 Je me concentre tout particulièrement sur le module de topologie réseau. Ce dernier, grâce à une base de données Neo4j,
-est capable d'analyser tout les types de réseaux des différents opérateurs téléphonique client de la solution.
+est capable d'analyser tous les types de réseaux et d'équipements des différents opérateurs téléphonique client de la solution.
 \\}
 
 %---- CAMELEON SOFTWARE -----------------------------------------------------------------
