feat(java): Remove Struts and Spring
not representative

--- a/java-software-engineer/cv-fred-combes.tex
+++ b/java-software-engineer/cv-fred-combes.tex
@@ -50,8 +50,7 @@ France
 français langue maternelle
 anglais (lu, écrit, parlé)
 \section{compétences}
-Java 8
-OSGi, Struts, Spring
+Java 8, OSGi
 Maven, Git, Docker
 Oracle, MySQL, Neo4j
 JS, CSS3, HTML5
