fix(main): Update personnal address

--- a/java-software-engineer/cv-fred-combes-en.tex
+++ b/java-software-engineer/cv-fred-combes-en.tex
@@ -38,8 +38,9 @@
 
 \begin{aside} % In the aside, each new line forces a line break
 \section{contact}
-1 rue Pons Capdenier
-31500 TOULOUSE
+APT 111, BAT C
+46 Chemin de l’église de Montaudran
+31400 TOULOUSE
 France
 ~
 +33 (0)6 31 97 71 06
