--- a/java-software-engineer/cv-fred-combes.tex
+++ b/java-software-engineer/cv-fred-combes.tex
@@ -27,6 +27,7 @@
 \usepackage{csquotes}
 
 \hypersetup{pdfborder={0 0 0},colorlinks}
+\input{../common/personal-infos}
 
 \begin{document}
 
@@ -38,18 +39,12 @@
 
 \begin{aside} % In the aside, each new line forces a line break
 \section{contact}
-APT 111, BAT C
-46 Chemin de l’église de Montaudran
-31400 TOULOUSE
-France
+\myAddress
 ~
-+33 (0)6 31 97 71 06
-\href{mailto:marthym@gmail.com}{marthym@gmail.com}
-\href{https://github.com/Marthym}{github.com/Marthym}
-\href{https://www.linkedin.com/in/combesfrederic}{in/combesfrederic}
+\myPhoneNumber
+\myReferences
 \section{langues}
-français langue maternelle
-anglais (lu, écrit, parlé)
+\myLanguages
 \section{compétences}
 Java 8, OSGi
 Maven, Git, Docker
