feat(cv): Add tech lead variation

--- a/java-tech-leader/cv-tech-lead-fred-combes.tex
+++ b/java-tech-leader/cv-tech-lead-fred-combes.tex
@@ -31,7 +31,7 @@
 
 \begin{document}
 
-\header{frédéric}{|}{combes}{expert développement java}
+\header{frédéric}{|}{combes}{java tech leader}
 
 %----------------------------------------------------------------------------------------
 %	SIDEBAR SECTION
@@ -46,10 +46,10 @@
 \section{langues}
 \myLanguages
 \section{compétences}
-Java 8, OSGi
+Agile, Scrum
+Java, Javascript
 Maven, Git, Docker
 Oracle, MySQL, Neo4j
-JS, CSS3, HTML5
 Linux
 \end{aside}
 
@@ -64,13 +64,12 @@ Linux
 {Depuis 2014}
 {Living Objects}
 {Toulouse, Basso Cambo}
-{\vspace{0.2cm}\emph{Expert développement Java} \discretright{/ Java 8, Neo4j, OSGi, Maven, Docker /}\\
-Au sein du département Recherche \& Développement de Living Objects, composé d'une quinzaine de développeurs,
+{\vspace{0.2cm}\emph{Expert développement Java} \discretright{/ Agile, Scrum, Java 8, Maven, Docker /}\\
+Au sein du département Recherche \& Développement de Living Objects, composé d’une quinzaine de développeurs,
 réparti entre frontend et backend, je participe au développement de "eye.LO". Le produit principal de la société. Développé
 en Java 8, sur un framework OSGi avec une architecture micro-service REST.\\
 
-Je me concentre tout particulièrement sur le module de topologie réseau. Ce dernier, grâce à une base de données Neo4j,
-est capable d’analyser tous les types de réseaux et d'équipements des différents opérateurs téléphonique client de la solution.
+L’autonomie laissée à l’équipe de développement me permet de mettre à profit mon expérience et ma capacité à prendre du recul afin proposer des choix techniques et des solutions appropriés aux difficultés rencontrées.
 \\}
 
 %---- CAMELEON SOFTWARE -----------------------------------------------------------------
@@ -78,15 +77,17 @@ est capable d’analyser tous les types de réseaux et d'équipements des diffé
 {2007 \ding{224} 2013}
 {Cameleon Software}
 {Toulouse, Labège}
-{\vspace{0.2cm}\emph{Consultant Technique Expert} \discretright{/ Java J2EE, Axis 2, Struts, HTML/CSS/Js /}\\
-Expert Technique au sein de l'équipe "CEO Services" composée de neuf personnes, mes attributions sont les suivantes :
+{\vspace{0.2cm}\emph{Consultant Technique Expert} \discretright{/ Java J2EE, Struts, Jenkins /}\\
+Référent Technique au sein de l’équipe "CEO Services" composée de neuf personnes, mes attributions sont les suivantes :
 
 \begin{enumerate}
 \item Développement de composants d’interface sur les nouveaux produits. Pour des sociétés comme la MNT pour qui j’ai implémenté des composants de leur offre en ligne grâce à ma maîtrise des technologies web 2.0.
 \item Réalisation d’intégration entre nos produits et des CRM tel que Selligent pour des clients comme Gras Savoye grâce à mes compétences en Web Services.
-\item Réalisation de PoC, pour des clients comme AXA, MMA, SAGE ou encore La Poste. Mon sens du relationnel et l’esprit d'équipe nécessaires pour de telles réalisations, m'ont permis de présenter des concepts aboutis à des clients convaincus.
-\item Missions à l’étranger pour travailler avec notre équipe à Chicago sur des projets SaS comme Clear Channel et Crystal Rock pour qui j’ai développé des interfaces avancées de configuration de produit.
+\item Réalisation de PoC, pour des clients comme AXA, MMA, SAGE ou encore La Poste. Mon sens du relationnel et l’esprit d’équipe nécessaires pour de telles réalisations, m’ont permis de présenter des concepts aboutis à des clients convaincus.
+\item Missions à l’étranger pour travailler avec notre équipe à Chicago sur des projets SaS comme Clear Channel et Crystal Rock pour qui j'ai développé des interfaces avancées de configuration de produit.
 \end{enumerate}
+
+De plus mes initiatives ont permis de mettre en place où d’améliorer les processus de développement et de test au sein de l’équipe technique (Serveur VMWare, intégration continue avec Jenkins, passage de SubVersion à Git, \ldots).
 \
 }
 
@@ -157,9 +158,9 @@ missions suivantes :
 	\capability {Java 8}
 		{Expert}
 		{Langage de programmation principal des applications éditées par Caméléon Software \& Living Objects}
-	\capability {Eclipse, IntelliJ}
+	\capability {Agile, Scrum}
 		{Maîtrise}
-		{EDIs utilisés pour les développements}
+		{Méthodologie utilisée avec souplesse chez Living Objects afin de s’organiser sur le projet EYE.lo}
 	\capability {Subversion, Git}
 		{Maîtrise}
 		{Outils de gestion de source utilisé par Cameleon Software \& Living Objects}
@@ -180,11 +181,10 @@ missions suivantes :
 
 \section{divers \& centres d’intérêt}
 
-Détenteur d'un \textbf{permis B}
+Détenteur d’un \textbf{permis B}
 
-\textbf{professionnel:} algorithmique, TDD, travail en équipe, challenges techniques
+\textbf{professionnel:} travail en équipe, challenges techniques, algorithmique, TDD
 
-\textbf{personnel:} Je fais parti du bureau de l’association sportive VLAM \\
-Et je suis, depuis 3 ans le capitaine de l’équipe Mixte du club.
+\textbf{personnel:} Membre du bureau de l’association sportive VLAM. Et, depuis 3 ans, capitaine de l’équipe Mixte du club.
 
 \end{document}
