ref(main): Refactor project to allow easy additional cv

--- a/friggeri-cv.cls
+++ b/friggeri-cv.cls
@@ -50,14 +50,17 @@
 
 \RequirePackage[quiet]{fontspec}
 
-\newfontfamily\bodyfont[]{Print Bold}
-\newfontfamily\thinfont[]{Print Clearly}
-\newfontfamily\dashedfont[]{Print Dashed}
-\newfontfamily\jobfont[]{SkarpaLT}
-\newfontfamily\headingfont[]{Arial Bold}
+\newfontfamily{\bodyfont}[Path = _fonts/]{PrintBold}
+\newfontfamily{\thinfont}[Path = _fonts/]{PrintClearly}
+\newfontfamily{\dashedfont}[Path = _fonts/]{PrintDashed}
+\newfontfamily{\jobfont}[Path = _fonts/]{SkarpaLT}
+\newfontfamily{\headingfont}[
+  Path=_fonts/,
+    Extension=.ttf
+]{Arial_Bold}
 
 \defaultfontfeatures{Color=textcolor}
-\setmainfont[
+\setmainfont[Path = _fonts/,
     UprightFont= HelveticaNeue-Light,
     BoldFont=HelveticaNeue-CondensedBold,
     ItalicFont=HelveticaNeue-UltraLightItal
