--- a/java-software-engineer/cv-fred-combes.tex
+++ b/java-software-engineer/cv-fred-combes.tex
@@ -27,7 +27,7 @@
 \usepackage{csquotes}
 
 \hypersetup{pdfborder={0 0 0},colorlinks}
-\input{../common/personal-infos}
+\input{common/personal-infos}
 
 \begin{document}
 
