fix(techlead): Fix some typos

--- a/java-tech-leader/cv-tech-lead-fred-combes.tex
+++ b/java-tech-leader/cv-tech-lead-fred-combes.tex
@@ -69,7 +69,7 @@ Au sein du département Recherche \& Développement de Living Objects, composé 
 réparti entre frontend et backend, je participe au développement de "eye.LO". Le produit principal de la société. Développé
 en Java 8, sur un framework OSGi avec une architecture micro-service REST.\\
 
-L’autonomie laissée à l’équipe de développement me permet de mettre à profit mon expérience et ma capacité à prendre du recul afin proposer des choix techniques et des solutions appropriés aux difficultés rencontrées.
+L’autonomie laissée à l’équipe de développement me permet de mettre à profit mon expérience et ma capacité à prendre du recul afin de proposer des choix techniques et des solutions appropriés aux difficultés rencontrées.
 \\}
 
 %---- CAMELEON SOFTWARE -----------------------------------------------------------------
@@ -87,7 +87,7 @@ Référent Technique au sein de l’équipe "CEO Services" composée de neuf per
 \item Missions à l’étranger pour travailler avec notre équipe à Chicago sur des projets SaS comme Clear Channel et Crystal Rock pour qui j'ai développé des interfaces avancées de configuration de produit.
 \end{enumerate}
 
-De plus mes initiatives ont permis de mettre en place où d’améliorer les processus de développement et de test au sein de l’équipe technique (Serveur VMWare, intégration continue avec Jenkins, passage de SubVersion à Git, \ldots).
+De plus mes initiatives ont permis de mettre en place ou d’améliorer les processus de développement et de test au sein de l’équipe technique (Serveur VMWare, intégration continue avec Jenkins, passage de SubVersion à Git, \ldots).
 \
 }
 
