feat(i-run): Add I-Run experience in tech-lead CV

--- a/common/personal-infos.tex
+++ b/common/personal-infos.tex
@@ -9,7 +9,8 @@ France
 
 \newcommand*{\myLanguages}{
 français \textit{maternelle}\\
-anglais \textit{(lu, écrit, parlé)}
+anglais \textit{(lu, écrit, parlé)}\\
+java \textit{(seconde)}
 }
 
 \newcommand*{\myReferences}{
