--- a/java-tech-leader/cv-tech-lead-fred-combes.tex
+++ b/java-tech-leader/cv-tech-lead-fred-combes.tex
@@ -47,7 +47,7 @@
 \myLanguages
 \section{compétences}
 Agile, Scrum
-Java, Javascript
+Java 8, Spring,
 Maven, Git, Docker
 Oracle, MySQL, Neo4j
 Linux
@@ -59,9 +59,26 @@ Linux
 \section{expériences professionnelles}
 
 \begin{entrylist}
+%---- I-RUN.FR --------------------------------------------------------------------
+\entry
+{Depuis 2018}
+{I-Run.fr}
+{Toulouse, Launaguet}
+{\vspace{0.2cm}\emph{Technical Leader Backend} \discretright{/ Agile, Spring, Java 8, Maven, Docker /}\\
+Responsable d’une équipe de 3 à 6 personnes, je suis en charge de trouver des solutions aux problématiques de développement 
+et de maintenance des projets I-Run.fr.
+
+Composé de plusieurs front office et d’un backoffice, les applications I-Run souffrent d’un fort legacy, avec l’aide de mon homologue
+front, je suis en charge de repenser l’architecture des applications et d’accompagner les développeurs dans la transition entre
+l’ancienne architecture et la nouvelle.
+
+En parallèle de ce projet de refactor, je suis en charge de maintenir la cohérence du code par de revues régulières et le suivi des 
+développements et de mise en production éffectuée toutes les semaines.
+\\}
+
 %---- LIVING OBJECTS --------------------------------------------------------------------
 \entry
-{Depuis 2014}
+{2014 \ding{224} 2017}
 {Living Objects}
 {Toulouse, Basso Cambo}
 {\vspace{0.2cm}\emph{Expert développement Java} \discretright{/ Agile, Scrum, Java 8, Maven, Docker /}\\
@@ -90,7 +107,8 @@ Référent Technique au sein de l’équipe "CEO Services" composée de neuf per
 De plus mes initiatives ont permis de mettre en place ou d’améliorer les processus de développement et de test au sein de l’équipe technique (Serveur VMWare, intégration continue avec Jenkins, passage de SubVersion à Git, \ldots).
 \
 }
-
+\end{entrylist}
+\begin{entrylist}
 %---- ACCESS COMMERCE --------------------------------------------------------------------
 \entry
 {2001 \ding{224} 2007}
@@ -108,7 +126,6 @@ missions suivantes :
 }
 %------------------------------------------------
 \end{entrylist}
-\newpage
 
 %----------------------------------------------------------------------------------------
 %	Section FORMATION
@@ -155,9 +172,15 @@ missions suivantes :
 		{Lu, écrit et parlé}
 		{Utilisé lors de mes déplacements aux USA et durant les réunions de cadrage avec les clients
 		étrangers.}
-	\capability {Java 8}
+	\capability {Java 8 / Maven}
 		{Expert}
-		{Langage de programmation principal des applications éditées par Caméléon Software \& Living Objects}
+		{Langage de programmation principal des applications éditées par Caméléon Software, Living Objects \& I-Run.fr}
+	\capability {Spring / Spring boot}
+		{Expert}
+		{Framework principal des application chez I-Run.fr}
+	\capability {Angular / Vue.js}
+		{Connaissance}
+		{Framework front utilisé chez I-Run.fr}
 	\capability {Agile, Scrum}
 		{Maîtrise}
 		{Méthodologie utilisée avec souplesse chez Living Objects afin de s’organiser sur le projet EYE.lo}
@@ -167,9 +190,6 @@ missions suivantes :
 	\capability {Oracle, MySQL}
 		{Expert}
 		{Certification OCA 10g, MySQL est la base de données utilisé chez Living Objects}
-	\capability {Maven, Ivy}
-		{Maîtrise}
-		{Outils de build utilisé chez Living Objects}
 	\capability {Linux}
 		{Expert}
 		{Unique système d’exploitation utilisé chez Cameleon Software \& Living Objects}
