fix(techlead): Fix typos

--- a/java-tech-leader/cv-tech-lead-fred-combes.tex
+++ b/java-tech-leader/cv-tech-lead-fred-combes.tex
@@ -68,12 +68,12 @@ Linux
 Responsable d’une équipe de 3 à 6 personnes, je suis en charge de trouver des solutions aux problématiques de développement 
 et de maintenance des projets I-Run.fr.
 
-Composé de plusieurs front office et d’un backoffice, les applications I-Run souffrent d’un fort legacy, avec l’aide de mon homologue
-front, je suis en charge de repenser l’architecture des applications et d’accompagner les développeurs dans la transition entre
-l’ancienne architecture et la nouvelle.
+Composées de plusieurs front office et d’un back office, les applications I-Run souffrent d’un fort legacy. 
+Avec l’aide de mon homologue front, je suis en charge de repenser l’architecture des applications et d’accompagner les 
+développeurs dans la transition entre l’ancienne architecture et la nouvelle.
 
-En parallèle de ce projet de refactor, je suis en charge de maintenir la cohérence du code par de revues régulières et le suivi des 
-développements et de mise en production éffectuée toutes les semaines.
+En parallèle de ce projet de refactor, je suis en charge de maintenir la cohérence du code par des revues régulières 
+et le suivi des développements et de mises en production efectuées toutes les semaines.
 \\}
 
 %---- LIVING OBJECTS --------------------------------------------------------------------
