feat(common): Update personnal informations

--- a/common/personal-infos.tex
+++ b/common/personal-infos.tex
@@ -1,6 +1,6 @@
 \newcommand*{\myAddress}{
-APT 111, BAT C\\
-46 Chemin de l’église de Montaudran\\
+APT 6\\
+282 Avenue Antoine-de-Saint-Exupéry\\
 31400 TOULOUSE\\
 France
 }
@@ -9,8 +9,7 @@ France
 
 \newcommand*{\myLanguages}{
 français \textit{maternelle}\\
-anglais \textit{(lu, écrit, parlé)}\\
-java \textit{(seconde)}
+anglais \textit{(lu, écrit, parlé)}
 }
 
 \newcommand*{\myReferences}{
