--- a/chief-technical-officer/main.tex
+++ b/chief-technical-officer/main.tex
@@ -46,12 +46,11 @@
 \section{langues}
 \myLanguages
 \section{compétences}
-Management, Communication,
-Recrutement, 
+Management, Leadership,
+Communication,
+Bienveillance,
 Agile, Scrum,
-Java 8, Spring,
-Maven, Git,
-Linux
+Bagage Technique
 \end{aside}
 
 %----------------------------------------------------------------------------------------
@@ -67,13 +66,13 @@ Linux
 {Toulouse, Launaguet}
 {\vspace{-0.2cm}\emph{i-Run.fr} \discretright{/ Management, Organisation, Agilité, Background Technique /}\\
 
-\begin{description}
-    \item [\bodyfont{|} \normalfont \textbf{\color{orange}CTO \color{headercolor}Adjoint}] \hfill \textit{Avril 2020}\\
+\begin{description}[leftmargin=0cm]
+    \item [\hspace*{-1cm}\bodyfont{|} \normalfont \textbf{\color{orange}CTO \color{headercolor}Adjoint}] \hfill \textit{Avril 2020}\\
     La société me confie l’ensemble des équipes du service informatique, composé alors de \textbf{quatre équipes et de 20 personnes} réparties en développeurs, consultants fonctionnels, administrateurs système et data scientists. Ma mission première a été de structurer les équipes afin de faciliter et fluidifier les communications entre elles. En lien direct avec la direction générale de la société, j’\textbf{élabore la stratégie informatique} pour l’ensemble des sites commerciaux de l’entreprise ainsi que pour le backoffice développé en interne. Je \textbf{prends les décisions adaptées} à la stratégie de la société \textbf{en pleine autonomie et supervise les équipes} du service dans la réalisation des projets.\\
     J’ai eu à c\oe{ur} de transmettre à mes équipes des valeurs de \textbf{bienveillance et de coopération} qui ont amené le service à la \textbf{réalisation de projets majeurs} comme le déplacement de notre production de Paris à Toulouse, la restructuration de tout notre réseau informatique logistique ou l’expansion de la société en Allemagne.
-    \item [\bodyfont{|} \normalfont \textbf{\color{orange}Responsable \color{headercolor}Technique}] \hfill \textit{Avril 2019}\\
+    \item [\hspace*{-1cm}\bodyfont{|} \normalfont \textbf{\color{orange}Responsable \color{headercolor}Technique}] \hfill \textit{Avril 2019}\\
     La société me fait confiance et me promeut au poste de Responsable Technique. Je manage alors l’ensemble des 8 développeurs. Je \textbf{supervise l’ensemble des choix techniques}. J’organise le fonctionnent de l’équipe via des rituels agile et un processus de travail Kanban. Je fais le \textbf{lien avec les équipes} fonctionnelle et système afin de coordonner au mieux les efforts de chacun. En charge de l’équipe, \textbf{je recrute de nouveaux développeurs} nécessaires au renforcement de l’équipe.
-    \item[\bodyfont{|} \normalfont \textbf{\color{orange}Tech \color{headercolor}Lead Backend}] \hfill \textit{Janvier 2018} \\
+    \item[\hspace*{-1cm}\bodyfont{|} \normalfont \textbf{\color{orange}Tech \color{headercolor}Lead Backend}] \hfill \textit{Janvier 2018} \\
     Arrivé en tant que Tech Lead Backend dans une équipe composée alors de 5 développeurs. Mes premières missions ont été, avec l’aide du Lead Frontend, de proposer \textbf{une stratégie et une architecture logicielle cohérentes}. La mise en place de \textbf{process} et de \textbf{bonnes pratiques} ont permis à l’équipe en place de réduire les régressions. L’établissement de \textbf{plans de formations} ont amené l’équipe à progresser et d’envisager plus sereinement les changements à venir.
 \end{description}
 \
@@ -157,23 +156,26 @@ En tant qu’unique ressource technique d'une équipe de sept personnes, j’ai,
 		{Utilisé lors de mes déplacements aux USA et durant les réunions de cadrage avec les clients
 		étrangers.}
     \capability {Management \& Leadership}
-		{Maîtrise}
+		{}
 		{Création, structuration et management direct de 4 équipes et 20 personnes chez i-Run.fr}
     \capability {Agile, Scrum, Kanban}
-		{Maîtrise}
+		{}
 		{Méthodologie utilisée avec souplesse chez Living Objects. Mise en place de rituels chez i-Run.fr}
     \capability {Pilotage de projet}
-		{Maîtrise}
+		{}
 		{Nombreux projets pilotés ou supervisés en tant que DSI Adjoint chez i-Run.fr}
+        \capability {Organisation}{}
+		{Capacité à gérer et suivre de front plusieurs projets sur plusieurs équipes chez i-Run.fr}
     \capability {Recrutement}
-		{Expert}
+		{}
 		{Chargé de tous les recrutements informatique chez i-Run.fr, pour faire passer l’équipe de 6 à 20 personnes}
     \capability {Bienveillance \& écoute}
-		{Maitrise}
-		{Mise en place de rituels de communication entre les membres du service chez i-Run.fr pour favoriser le dialogue et l’épanouissement des membres de l’équipe.}
+		{}
+		{Mise en place de rituels de communication entre les membres du service chez i-Run.fr pour favoriser le dialogue 
+        et l’épanouissement des membres de l’équipe.}
     \capability {Bagage Technique}
 		{Expert}
-		{Compétences Java, Spring, MySQL, Angular, Linux, \dots exploités tout au long de ma carrière}
+		{Compétences Java, Spring, MySQL, Angular, Linux, \dots\ exploités tout au long de ma carrière}
 \end{capabilitize}
 
 %----------------------------------------------------------------------------------------
@@ -184,8 +186,8 @@ En tant qu’unique ressource technique d'une équipe de sept personnes, j’ai,
 
 Détenteur d’un \textbf{permis B}
 
-\textbf{professionnel:} travail en équipe, challenges techniques, algorithmique, TDD
+\textbf{professionnel:} travail en équipe, challenges techniques, Software Craftsmanship.
 
-\textbf{personnel:} Membre du bureau de l’association sportive VLAM. Et, depuis 3 ans, capitaine de l’équipe Mixte du club.
+\textbf{personnel:} Membre du bureau de l’association sportive VLAM (Volley-Ball).
 
 \end{document}
