feat(cv): Improve CTO cv version

--- a/common/personal-infos.tex
+++ b/common/personal-infos.tex
@@ -9,7 +9,7 @@ France
 
 \newcommand*{\myLanguages}{
 français \textit{maternelle}\\
-anglais \textit{(lu, écrit, parlé)}
+anglais \textit{lu, écrit, parlé}
 }
 
 \newcommand*{\myReferences}{
