--- a/chief-technical-officer/main.tex
+++ b/chief-technical-officer/main.tex
@@ -66,14 +66,15 @@ Bagage Technique
 {Toulouse, Launaguet}
 {\vspace{-0.2cm}\emph{i-Run.fr} \discretright{/ Management, Organisation, Agilité, Background Technique /}\\
 
+En 4 ans chez i-Run.fr j’ai eu l’opportunité d’évoluer sur trois niveaux d’encadrement d’équipes et ainsi d’affiner mes \textbf{compétences en management et mon leadership}.
 \begin{description}[leftmargin=0cm]
     \item [\hspace*{-1cm}\bodyfont{|} \normalfont \textbf{\color{orange}CTO \color{headercolor}Adjoint}] \hfill \textit{Avril 2020}\\
-    La société me confie l’ensemble des équipes du service informatique, composé alors de \textbf{quatre équipes et de 20 personnes} réparties en développeurs, consultants fonctionnels, administrateurs système et data scientists. Ma mission première a été de structurer les équipes afin de faciliter et fluidifier les communications entre elles. En lien direct avec la direction générale de la société, j’\textbf{élabore la stratégie informatique} pour l’ensemble des sites commerciaux de l’entreprise ainsi que pour le backoffice développé en interne. Je \textbf{prends les décisions adaptées} à la stratégie de la société \textbf{en pleine autonomie et supervise les équipes} du service dans la réalisation des projets.\\
-    J’ai eu à c\oe{ur} de transmettre à mes équipes des valeurs de \textbf{bienveillance et de coopération} qui ont amené le service à la \textbf{réalisation de projets majeurs} comme le déplacement de notre production de Paris à Toulouse, la restructuration de tout notre réseau informatique logistique ou l’expansion de la société en Allemagne.
+    La société me confie l’ensemble des équipes du service informatique, composé alors de \textbf{4~équipes et de 20 personnes} réparties en développeurs, consultants fonctionnels, administrateurs système et data scientists. Ma mission première a été de structurer les équipes afin de faciliter et fluidifier les communications entre elles. En lien direct avec la direction générale de la société, j’\textbf{élabore la stratégie informatique} pour l’ensemble des sites commerciaux de l’entreprise ainsi que pour le backoffice développé en interne. Je \textbf{prends les décisions adaptées} à la stratégie de la société \textbf{en pleine autonomie et supervise les équipes} du service dans la réalisation des projets.\\
+    J’ai à c\oe{ur} de transmettre à mes équipes des valeurs de \textbf{bienveillance et de coopération} qui ont amené le service à la \textbf{réalisation de projets majeurs} comme le déplacement de notre production de Paris à Toulouse, la restructuration de tout notre réseau informatique logistique ou l’expansion de la société en Allemagne.
     \item [\hspace*{-1cm}\bodyfont{|} \normalfont \textbf{\color{orange}Responsable \color{headercolor}Technique}] \hfill \textit{Avril 2019}\\
-    La société me fait confiance et me promeut au poste de Responsable Technique. Je manage alors l’ensemble des 8 développeurs. Je \textbf{supervise l’ensemble des choix techniques}. J’organise le fonctionnent de l’équipe via des rituels agile et un processus de travail Kanban. Je fais le \textbf{lien avec les équipes} fonctionnelle et système afin de coordonner au mieux les efforts de chacun. En charge de l’équipe, \textbf{je recrute de nouveaux développeurs} nécessaires au renforcement de l’équipe.
+    La société me fait confiance et me promeut au poste de Responsable Technique. Je manage alors l’ensemble des 8 développeurs. Je \textbf{supervise l’ensemble des choix techniques}. J’organise le fonctionnement de l’équipe via des rituels agiles sur une base Kanban. Je fais le \textbf{lien avec les équipes} fonctionnelle et système afin de coordonner au mieux les efforts de chacun. De plus, \textbf{je recrute de nouveaux développeurs} nécessaires au renforcement de l’équipe.
     \item[\hspace*{-1cm}\bodyfont{|} \normalfont \textbf{\color{orange}Tech \color{headercolor}Lead Backend}] \hfill \textit{Janvier 2018} \\
-    Arrivé en tant que Tech Lead Backend dans une équipe composée alors de 5 développeurs. Mes premières missions ont été, avec l’aide du Lead Frontend, de proposer \textbf{une stratégie et une architecture logicielle cohérentes}. La mise en place de \textbf{process} et de \textbf{bonnes pratiques} ont permis à l’équipe en place de réduire les régressions. L’établissement de \textbf{plans de formations} ont amené l’équipe à progresser et d’envisager plus sereinement les changements à venir.
+    Arrivé dans une équipe alors composée de 5 développeurs, mes premières missions sont, avec l’aide du Lead Frontend, de proposer \textbf{une stratégie et une architecture logicielle cohérente}. La mise en place de \textbf{process} et de \textbf{bonnes pratiques} permet à l’équipe de réduire les régressions. J’établis également des \textbf{plans de formations} qui amènent l’équipe à progresser et à envisager plus sereinement les changements à venir.
 \end{description}
 \
 }
@@ -85,7 +86,7 @@ Bagage Technique
 {Toulouse, Basso Cambo}
 {\vspace{0.2cm}\emph{Living Objects} \discretright{/ Agile, Scrum, Java 8, Maven, Docker /}\\
 Au sein du département Recherche \& Développement, je participe au développement du produit principal de la société.\\
-L’autonomie laissée à notre équipe de quinze développeurs me permet de mettre à profit ma capacité à prendre du recul. Ma vision globale du projet m’a permis de proposer des choix techniques et des solutions appropriées aux difficultés rencontrées.
+L’autonomie laissée à notre équipe de 15 développeurs me permet de mettre à profit ma \textbf{capacité à prendre du recul}. Ma \textbf{vision d’ensemble} des projets m’aide à proposer des \textbf{choix techniques et des solutions appropriées} aux difficultés rencontrées.
 \\}
 \end{entrylist}
 \begin{entrylist}
@@ -95,7 +96,7 @@ L’autonomie laissée à notre équipe de quinze développeurs me permet de met
 {Consultant Technique Expert}
 {Toulouse, Labège}
 {\vspace{0.2cm}\emph{Cameleon Software} \discretright{/ Java J2EE, Struts, Jenkins /}\\
-Référent Technique au sein de l’équipe "CEO Services" composée de neuf personnes, j’ai été chargé de comprendre et d’intégrer les besoins de nos clients avec la solution logicielle développée par l’entreprise. En contact direct avec les clients, les prestataires et les équipes de développement, j’ai eu la charge de coordonner les ressources techniques pour amener les projets au bout dans les délais requis.
+Référent Technique au sein de l’équipe "CEO Services" composée de 9 personnes, je suis chargé de \textbf{comprendre et d’implémenter les besoins de nos clients} en intégrant la solution logicielle développée par l’entreprise. En contact direct avec les clients, les prestataires et les équipes de développement, j’ai la charge de \textbf{coordonner les ressources techniques} pour amener les projets à terme dans les délais requis.
 \
 }
 
@@ -105,7 +106,7 @@ Référent Technique au sein de l’équipe "CEO Services" composée de neuf per
 {Développeur Java / Oracle}
 {Toulouse, Labège}
 {\vspace{0.2cm}\emph{Access-Commerce}  \discretright{/ Java, J2EE, Administration Oracle, Linux/UNIX /}\\
-En tant qu’unique ressource technique d'une équipe de sept personnes, j’ai, entre autres, effectué des développements et adaptations diverses sur l’ERP intégré par la société.
+En tant qu’unique ressource technique d’une équipe de 7 personnes, j’effectue, entre autres, des développements et adaptations diverses sur l’ERP intégré par la société.
 }
 %------------------------------------------------
 \end{entrylist}
@@ -161,21 +162,22 @@ En tant qu’unique ressource technique d'une équipe de sept personnes, j’ai,
     \capability {Agile, Scrum, Kanban}
 		{}
 		{Méthodologie utilisée avec souplesse chez Living Objects. Mise en place de rituels chez i-Run.fr}
-    \capability {Pilotage de projet}
+    \capability {Pilotage de projets \& Organisation}
 		{}
-		{Nombreux projets pilotés ou supervisés en tant que DSI Adjoint chez i-Run.fr}
-        \capability {Organisation}{}
-		{Capacité à gérer et suivre de front plusieurs projets sur plusieurs équipes chez i-Run.fr}
+		{Nombreux projets pilotés ou supervisés sur l’ensemble des équipes chez i-Run.fr}
     \capability {Recrutement}
 		{}
-		{Chargé de tous les recrutements informatique chez i-Run.fr, pour faire passer l’équipe de 6 à 20 personnes}
+		{Chargé des recrutements informatique chez i-Run.fr, pour faire passer l’équipe de 6 à 20 personnes}
+    \capability {Pédagogie}
+        {}
+        {Formations à l’équipe de développement chez i-Run.fr et animations d’ateliers hebdomadaires de partage de connaissances}
     \capability {Bienveillance \& écoute}
 		{}
 		{Mise en place de rituels de communication entre les membres du service chez i-Run.fr pour favoriser le dialogue 
-        et l’épanouissement des membres de l’équipe.}
+        et l’épanouissement des membres de l’équipe}
     \capability {Bagage Technique}
 		{Expert}
-		{Compétences Java, Spring, MySQL, Angular, Linux, \dots\ exploités tout au long de ma carrière}
+		{Compétences Java, Spring, MySQL, Angular, Vue.js, Linux\dots\ exploités tout au long de ma carrière}
 \end{capabilitize}
 
 %----------------------------------------------------------------------------------------
@@ -186,8 +188,8 @@ En tant qu’unique ressource technique d'une équipe de sept personnes, j’ai,
 
 Détenteur d’un \textbf{permis B}
 
-\textbf{professionnel:} travail en équipe, challenges techniques, Software Craftsmanship.
+\textbf{Professionnel} : Travail en équipe, challenges techniques, Software Craftsmanship, Brown Bag Lunch.
 
-\textbf{personnel:} Membre du bureau de l’association sportive VLAM (Volley-Ball).
+\textbf{Personnel} : Membre du bureau de l’association sportive VLAM (Volley-Ball).
 
 \end{document}
